kubernetes/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: golang-todo-api-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      # protocol: TCP
  type: LoadBalancer
  selector:
    app: go-todo-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-todo-api-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/group.name: kube-alb-group  #Use this to share ALB among multiple ingresses. #CostEffective
    # alb.ingress.kubernetes.io/load-balancer-name: kube-alb  # give ALB a meaningfull name otherwise a random name is assigned by AWS.
    # alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:XXXX:certificate/YYYY" # Get it by $ aws acm list-certificates 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: golang-todo-api-service
              port:
                number: 8080
